[package]
name = "dwebp"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "dwebp"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/webp-rs"
homepage = "https://github.com/bk-rs/webp-rs"
documentation = "https://docs.rs/dwebp"
keywords = []
categories = []
readme = "README.md"

[dependencies]
