[package]
name = "dwebp"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "dwebp"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/webp-rs"
homepage = "https://github.com/bk-rs/webp-rs"
documentation = "https://docs.rs/dwebp"
keywords = []
categories = []
readme = "README.md"

[dependencies]
webp-animation = { version = "0.5", default-features = false, features = ["image"] }
image = { version = "0.23", default-features = false, features = [ "png" ] }

[dev-dependencies]
png = { version = "0.17", default-features = false }
tempfile = { version = "3.2", default-features = false }
